# MoPeA

./: kernel.sh  main.py  pyproject.toml
src/: backup.pth  best1.pth  best2.pth  best3.pth  best3n.pth  best4n.pth  best8n.pth  best_att.pth  clean.pth  clean8n.pth  first.pth  good8n.pth  model.py  model_tests.ipynb  mpi_tests.ipynb  odr_test.ipynb  rote.pth  rote3n.pth  rote_test.ipynb
